src/parser/snapshots/expr/logical/logical_mixed_and_or_parens.snap
---
source: src/parser/parser.rs
description: logical expressions with correct precedence
expression: actual.unwrap()
info: 1 && (2 || 3)
---
location:
  line: 1
  column: 1
kind:
  binary:
    - and
    - location:
        line: 1
        column: 1
      kind:
        int_constant:
          - "1"
          - decimal
    - location:
        line: 1
        column: 7
      kind:
        binary:
          - or
          - location:
              line: 1
              column: 7
            kind:
              int_constant:
                - "2"
                - decimal
          - location:
              line: 1
              column: 12
            kind:
              int_constant:
                - "3"
                - decimal
