src/parser/snapshots/expr/logical/logical_not.snap
---
source: src/parser/parser.rs
description: logical expressions
expression: actual.unwrap()
info: "!10"
---
location:
  line: 1
  column: 1
kind:
  unary:
    - not
    - location:
        line: 1
        column: 2
      kind:
        int_constant:
          - "10"
          - decimal
