src/parser/snapshots/expr/logical/logical_or.snap
---
source: src/parser/parser.rs
description: logical expressions
expression: actual.unwrap()
info: 1 || 0
---
location:
  line: 1
  column: 1
kind:
  binary:
    - or
    - location:
        line: 1
        column: 1
      kind:
        int_constant:
          - "1"
          - decimal
    - location:
        line: 1
        column: 6
      kind:
        int_constant:
          - "0"
          - decimal
